<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".SuperHeroesApp.DetailSuperHeroeActivity">

    <ImageView
        android:id="@+id/imageSHD"
        android:layout_width="0dp"
        android:layout_height="265dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="235dp"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/orange_pastel"
        app:cardCornerRadius="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBarSH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameSH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="38sp"
                tools:text="hola" />

            <TextView
                android:id="@+id/realNameSHD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="hola 2"/>

            <TextView
                android:id="@+id/publisherSH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAllCaps="false"
                android:textSize="14sp"
                android:textColor="@color/black"
                tools:text="hola 3"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <View
                    android:id="@+id/inteGraph"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="2sp"
                    android:layout_weight="1"
                    android:background="@color/attr_intell" />

                <View
                    android:id="@+id/strenGraph"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="2sp"
                    android:layout_weight="1"
                    android:background="@color/attr_stren" />

                <View
                    android:id="@+id/speedGraph"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="2sp"
                    android:layout_weight="1"
                    android:background="@color/attr_speed" />

                <View
                    android:id="@+id/durabGraph"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="2sp"
                    android:layout_weight="1"
                    android:background="@color/attr_durab" />

                <View
                    android:id="@+id/powerGraph"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="2sp"
                    android:layout_weight="1"
                    android:background="@color/attr_power" />

                <View
                    android:id="@+id/combatGraph"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="2sp"
                    android:layout_weight="1"
                    android:background="@color/attr_combat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/intelValue"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="2sp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="100"
                    />

                <TextView
                    android:id="@+id/strenValue"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="2sp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="100"
                    />

                <TextView
                    android:id="@+id/speedValue"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="2sp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="100"
                    />

                <TextView
                    android:id="@+id/durabValue"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="2sp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="100"
                    />

                <TextView
                    android:id="@+id/powerValue"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="2sp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="100"
                    />

                <TextView
                    android:id="@+id/combatValue"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="2sp"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="100"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="2sp"
                    android:layout_weight="1"
                    android:text="@string/attr1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="2sp"
                    android:layout_weight="1"
                    android:text="@string/attr2"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="2sp"
                    android:layout_weight="1"
                    android:text="@string/attr3"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="2sp"
                    android:layout_weight="1"
                    android:text="@string/attr4"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="2sp"
                    android:layout_weight="1"
                    android:text="@string/attr5"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginHorizontal="2sp"
                    android:layout_weight="1"
                    android:text="@string/attr6"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textSize="11sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/alterEgoSH"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="2sp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="hola pendejo"/>

                    <TextView
                        android:id="@+id/POBSH"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="2sp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="hola pendejo"/>


                    <TextView
                        android:id="@+id/alignSH"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="2sp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="hola pendejo"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/FASH"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="2sp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="hola pendejo"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>